web-infras/parser/tests/fixtures/babel/es2022/class-private-properties/undeclared-nested/output.txt
[SyntaxError]: Private name undeinfed (4,20)
4|    var prop = foo.#priv;
 |                  ^
